# aoc

./: .gitignore
aoc2024/aoc_ocaml/: .ocamlformat  aoc_ocaml.opam  dune-project
aoc2024/aoc_ocaml/_opam/.opam-switch/: environment  switch-config  switch-state
aoc2024/aoc_ocaml/_opam/.opam-switch/config/: ocaml.config
aoc2024/aoc_ocaml/_opam/.opam-switch/install/: astring.changes  base.changes  camlp-streams.changes  chrome-trace.changes  cmdliner.changes  cppo.changes  crunch.changes  crunch.install  csexp.changes  dune-build-info.changes  dune-build-info.install  dune-configurator.changes  dune-rpc.changes  dune-rpc.install  dune.changes  dyn.changes  either.changes  fiber.changes  fiber.install  fix.changes  fix.install  fmt.changes  (+56 more)
aoc2024/aoc_ocaml/_opam/lib/: findlib.conf
aoc2024/aoc_ocaml/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune  lib.ml  lib.mli  simple.ml  time.ml  time.mli  util.ml
aoc2024/aoc_ocaml/lib/bheap/: bheap.ml  bheap.mli  dune
aoc2024/aoc_ocaml/lib/grid/: dune  grid.ml  grid.mli
aoc2024/aoc_ocaml/lib/option/: dune  option.ml  option.mli
aoc2024/aoc_ocaml/lib/point/: dune  point.ml  point.mli
aoc2024/aoc_ocaml/lib/string/: dune  string.ml  string.mli
aoc2024/aoc_ocaml/lib/tuple/: dune  tuple.ml  tuple.mli
aoc2024/aoc_ocaml/lib/util/: dune  fmt.ml  general.ml  operators.ml  solution.ml  time.ml  util.ml  util.mli
(+6519 files in other folders)
