(lang dune 3.17)

(name aoc_ocaml)

(generate_opam_files true)

(homepage "www.example.com")
(bug_reports "www.example.com")
(authors "Roy E. Crippen IV")
(maintainers "Roy E. Crippen IV")

(license MIT)

(package
 (name aoc_ocaml)
 (synopsis "Advent of code 2024 Solutions in Ocaml")
 (description "A longer description")
 (depends ocaml ppx_inline_test re)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
